<resources>

    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="place">Place</string>
    <string name="click_image">Click to add image</string>
    <string name="no_connection">No network connection!</string>
    <string name="upload">Upload</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="image">Image</string>
    <string name="like">Like</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="send_comment">Send comment</string>
    <string name="write_comment">Write your comment</string>
    <string name="required">Required</string>

    <!--Accessibility string-->
    <string name="content_description_back_button">Back button</string>
    <string name="content_description_place_icon">Place icon</string>
    <string name="content_description_note_icon">Description icon</string>

    <string name="prefs_auth_file" translatable="false">authFile</string>
    <string name="prefs_is_auth" translatable="false">isAuth</string>

    <string name="transition_photo" translatable="false">transition_photo</string>

    <string name="msg_sign_out">You have successfully sign out</string>
    <string name="msg_sign_required">You need to Sign in to upload photo</string>
    <string name="msg_sign_comment">You need to Sign in to comment</string>
    <string name="msg_sign_like">You need to Sign in to like</string>
    <string name="msg_wallpaper_set">Wallpaper has been set</string>
    <string name="progress_upload">Uploading</string>
    <string name="progress_download">Downloading</string>
    <string name="please_wait">Please wait</string>

    <string name="failed_upload">Failed to upload!</string>
    <string name="empty_text_view">Empty Text</string>

    <string name="authority" translatable="false">com.coltan.keralaattractions</string>
    <string name="facebook_application_id" translatable="false">371060926368185</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb371060926368185</string>
</resources>
