<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.coltan.keralaattractions.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        style="@style/Widget.Attractions.HomeToolbar"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/toolbar"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_photo"
                app:layout_collapseMode="parallax"
                app:srcCompat="@color/background_dark" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_title"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:background="@color/background_title"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                android:paddingStart="@dimen/padding_normal"
                android:paddingTop="@dimen/padding_normal"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/title"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />
            </LinearLayout>

            <ImageView
                android:id="@+id/place_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/content_description_place_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_title"
                app:srcCompat="@drawable/ic_place_black_24dp" />

            <TextView
                android:id="@+id/place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/place"
                app:layout_constraintBottom_toBottomOf="@+id/place_icon"
                app:layout_constraintLeft_toRightOf="@+id/place_icon"
                app:layout_constraintTop_toTopOf="@+id/place_icon" />

            <ImageView
                android:id="@+id/description_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/content_description_note_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/place_icon"
                app:srcCompat="@drawable/ic_speaker_notes_black_24dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/description"
                app:layout_constraintBottom_toBottomOf="@+id/description_icon"
                app:layout_constraintLeft_toRightOf="@+id/description_icon"
                app:layout_constraintTop_toTopOf="@+id/description_icon" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/authorPic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/author"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/author"
                app:srcCompat="@color/author_background" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/author"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                app:layout_constraintRight_toLeftOf="@+id/authorPic"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <LinearLayout
                android:id="@+id/linear_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorPic">

                <Button
                    android:id="@+id/action_like"
                    style="@style/Widget.Attractions.InlineAction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_action_favorite_outline"
                    android:text="@string/like" />

                <Button
                    android:id="@+id/action_set_wallpaper"
                    style="@style/Widget.Attractions.InlineAction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_action_image"
                    android:text="@string/wallpaper" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/commentRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_action" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>


    <!-- Comment Bottom Sheet -->
    <LinearLayout
        android:id="@+id/linLayoutComment"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/background_white"
        android:orientation="vertical"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/mid_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/edNewComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:hint="@string/write_comment"
                android:inputType="textCapSentences" />

            <ImageButton
                android:id="@+id/sendCommentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/background_light"
                android:contentDescription="@string/send_comment"
                android:paddingEnd="16dp"
                android:paddingStart="8dp"
                app:srcCompat="@drawable/ic_send_black_24dp" />
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>