<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/title"
        android:layout_width="42dp"
        android:layout_height="17dp"
        android:id="@+id/tvTitle"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="280dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="214dp"
        android:layout_height="44dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tvTitle"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:text="@string/place"
        android:layout_width="59dp"
        android:layout_height="18dp"
        android:id="@+id/tvPlace"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/etTitle" />

    <EditText
        android:layout_width="216dp"
        android:layout_height="44dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etPlace"
        app:layout_constraintBottom_toBottomOf="@+id/tvPlace"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvPlace"
        app:layout_constraintLeft_toRightOf="@+id/tvPlace"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginEnd="16dp" />

    <Button
        android:text="@string/upload"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:id="@+id/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp" />

    <TextView
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDescription"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/etPlace"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etDescription"
        app:layout_constraintTop_toTopOf="@+id/tvDescription"
        app:layout_constraintBottom_toBottomOf="@+id/tvDescription"
        app:layout_constraintLeft_toRightOf="@+id/tvDescription"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="32dp"
        android:adjustViewBounds="true" />

    <TextView
        android:text="@string/click_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView" />

</android.support.constraint.ConstraintLayout>